# Fractol

./: .gitignore  CMakeLists.txt  Makefile  README.md  _config_mac.sh  kernel.cl
buildXcode/Debug/: kernel.cl
include/: cl.h  clamp.h  color.h  fdf.h  fractol.h  handle_input.h  keys.h  mix.h  timer.h  vec2i.h
libft/: CMakeLists.txt  Makefile  author
libft/include/: get_next_line.h  libft.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_count_symbols.c  ft_count_words.c  ft_get_size.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+28 more)
libmlx/: Makefile
libmlx/include/: __mlx.h  __mlx_int.h  __mlx_new_window.h  mlx.h
libmlx/sources/: __font.c  __font.xcf  __mlx_init_loop.m  __mlx_int_str_to_wordtab.c  __mlx_new_image.m  __mlx_new_window.m  __mlx_rgb.c  __mlx_shaders.c  __mlx_xpm.c  mlx_new_window.m
src/: cl.c  clamp.c  color.c  handle_input.c  image.c  init.c  loop.c  main.c  mix.c  parsing.c  timer.c  utility.c  vec2i.c
